--- a/SerialCommunicator/Themes/ColourfulLightTheme.xaml
+++ b/SerialCommunicator/Themes/ColourfulLightTheme.xaml
@@ -13,7 +13,7 @@
     <SolidColorBrush x:Key="ContainerBackground" Color="WhiteSmoke"/>
     <SolidColorBrush x:Key="ContainerBorder" Color="#FFE8E8E8"/>
     <SolidColorBrush x:Key="ControlDefaultForeground"  Color="#FF040404" />
-    <SolidColorBrush x:Key="ControlMOSelectForeground"  Color="#FFEBEBEB" />
+    <SolidColorBrush x:Key="ControlMOSelectForeground"  Color="#FF040404" />
 
     <SolidColorBrush x:Key="ControlDarkerBackground"             Color="#FFC7C7C7"/>
     <SolidColorBrush x:Key="ControlDarkerBorderBrush"            Color="#FFBEBEBE"/>
@@ -36,27 +36,28 @@
 
     <!-- Colourful theme  Colours -->
 
-    <SolidColorBrush x:Key="ControlPrimaryDarkerBackground"             Color="#FF1565C0"/>
-    <SolidColorBrush x:Key="ControlPrimaryDarkerBorderBrush"            Color="#FF1976D2"/>
-    <SolidColorBrush x:Key="ControlPrimaryDefaultBackground"            Color="#FF2084E8"/>
-    <SolidColorBrush x:Key="ControlPrimaryDefaultBorderBrush"           Color="#FF3294E8"/>
-    <SolidColorBrush x:Key="ControlPrimaryBrightDefaultBackground"      Color="#FF3296FA"/>
-    <SolidColorBrush x:Key="ControlPrimaryBrightDefaultBorderBrush"     Color="#FF50A4FA"/>
-    <SolidColorBrush x:Key="ControlPrimaryDisabledBackground"           Color="#FF3278C8"/>
-    <SolidColorBrush x:Key="ControlPrimaryDisabledBorderBrush"          Color="#FF3C78C8"/>
-    <SolidColorBrush x:Key="ControlPrimaryMouseOverBackground"          Color="#FF208CF0"/>
-    <SolidColorBrush x:Key="ControlPrimaryMouseOverBorderBrush"         Color="#FF2896F5"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedBackground"           Color="#FF1482DC"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedBorderBrush"          Color="#FF28A0F0"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverBackground"  Color="#FF1484D1"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverBorderBrush" Color="#FF1491E8"/>
-    <SolidColorBrush x:Key="ControlPrimaryCaretSelectionBackground"     Color="#FF3297E8"/>
-    <SolidColorBrush x:Key="ControlPrimaryCaretBackground"              Color="#FF1992F1"/>
-    <SolidColorBrush x:Key="ControlPrimaryGlythColour"                  Color="#FF1E88E5"/>
-    <SolidColorBrush x:Key="ControlPrimaryMouseOverGlythColour"         Color="#FF2196F3"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedGlythColour"          Color="#FF42A5F5"/>
-    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverGlythColour" Color="#FF339AF7"/>
-    <SolidColorBrush x:Key="ControlPrimaryDisabledGlythColour"          Color="#FF081E3C"/>
+    <SolidColorBrush x:Key="ControlPrimaryDarkerBackground"             Color="#FF64BEFF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDarkerBorderBrush"            Color="#FF50B4FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDefaultBackground"            Color="#FF78C8FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDefaultBorderBrush"           Color="#FF64BEFF"/>
+    <SolidColorBrush x:Key="ControlPrimaryBrightDefaultBackground"      Color="#FF8CD2FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryBrightDefaultBorderBrush"     Color="#FF78C8FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDisabledBackground"           Color="#FFBEE6FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDisabledBorderBrush"          Color="#FFB4E1FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryMouseOverBackground"          Color="#FFA0DCFF"/>
+    <SolidColorBrush x:Key="ControlPrimaryMouseOverBorderBrush"         Color="#FF96D2FF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedBackground"           Color="#FFB4E6FF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedBorderBrush"          Color="#FFA0DCFF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverBackground"  Color="#FFAFE1FF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverBorderBrush" Color="#FFAAD2FF"/>
+
+    <SolidColorBrush x:Key="ControlPrimaryCaretSelectionBackground"     Color="#FF64B4FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryCaretBackground"              Color="#FF84C8FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryGlythColour"                  Color="#FF64B4FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryMouseOverGlythColour"         Color="#FF82BEFF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedGlythColour"          Color="#FF73B9FF"/>
+    <SolidColorBrush x:Key="ControlPrimarySelectedMouseOverGlythColour" Color="#FF73B4FF"/>
+    <SolidColorBrush x:Key="ControlPrimaryDisabledGlythColour"          Color="#FF142864"/>
 
     <!-- Setup Stuff -->
 
@@ -2342,7 +2343,20 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="SeparatorStyle1" TargetType="{x:Type Separator}">
+    <Style x:Key="VerticalSeparator" TargetType="{x:Type Separator}">
+        <Setter Property="Background" Value="{StaticResource ControlBrightDefaultBackground}"/>
+        <Setter Property="Width" Value="2"/>
+        <Setter Property="Margin" Value="2,0,2,0"/>
+        <Setter Property="Focusable" Value="false"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Separator}">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Height="Auto" SnapsToDevicePixels="true"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="MenuItemSeparator" TargetType="{x:Type Separator}">
         <Setter Property="Background" Value="{StaticResource ControlBrightDefaultBorderBrush}"/>
         <Setter Property="Margin" Value="0,2,0,2"/>
         <Setter Property="Focusable" Value="false"/>
@@ -3828,19 +3842,4 @@
     </ControlTemplate>
 
     <!-- -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_- -->
-
-    <!-- Separator -->
-    <Style x:Key="VerticalSeparator" TargetType="{x:Type Separator}">
-        <Setter Property="Background" Value="{StaticResource ControlBrightDefaultBackground}"/>
-        <Setter Property="Width" Value="2"/>
-        <Setter Property="Margin" Value="2,0,2,0"/>
-        <Setter Property="Focusable" Value="false"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Separator}">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Height="Auto" SnapsToDevicePixels="true"/>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
 </ResourceDictionary>
