--- a/SerialCommunicator/Windows/GraphWindow.xaml
+++ b/SerialCommunicator/Windows/GraphWindow.xaml
@@ -31,7 +31,7 @@
             </Grid.ColumnDefinitions>
             <graphs:GraphControl Margin="10" Controller="{Binding Controller}" />
 
-            <Border Grid.Column="1" Margin="10" BorderBrush="Gray" BorderThickness="1" CornerRadius="5" Padding="5">
+            <GroupBox Header="Controls" Grid.Column="1" Margin="0,10,10,10" BorderThickness="1" Padding="5">
                 <Grid>
                     <StackPanel Height="258" VerticalAlignment="Top">
 
@@ -57,7 +57,7 @@
                     </StackPanel>
                     <Button Padding="5" Command="{Binding Controller.ClearCommand}" Margin="0,263,0,0">Clear</Button>
                 </Grid>
-            </Border>
+            </GroupBox>
         </Grid>
     </Grid>
 </Window>
