--- a/SerialCommunicator/MainWindow.xaml
+++ b/SerialCommunicator/MainWindow.xaml
@@ -178,37 +178,55 @@
                 <RowDefinition Height="180" MinHeight="160" MaxHeight="225"/>
             </Grid.RowDefinitions>
             <DockPanel Grid.Row="0" Margin="0,0,0,2">
-                <StackPanel DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" 
-                                    x:Name="SettingsMenu" DockPanel.Dock="Right" HorizontalAlignment="Right" Width="0">
-                    <Label Content="Transceive Filtering" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                    <Label Content="DONT CHECK MORE THAN 1 SEND/RECEIVE" FontSize="9" HorizontalAlignment="Center" VerticalAlignment="Top"
-                                   ToolTip="Dont clicked multiple [send with/receive with] checkboxes, otherwise the topmost checked one will be applied."/>
-                    <StackPanel DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
-                        <CheckBox IsChecked="{Binding SendWithNewLine, UpdateSourceTrigger=PropertyChanged}"     Margin="0 0 0 2" Content="Send with NewLine" VerticalAlignment="Top"/>
-                        <CheckBox IsChecked="{Binding SendWithCustomTag, UpdateSourceTrigger=PropertyChanged}"   Margin="0 0 0 2" Content="Send w/ Custom Tag" VerticalAlignment="Top"/>
-                        <CheckBox IsChecked="{Binding SendWithNothingElse, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 2" Content="Send raw (no new line)" VerticalAlignment="Top"/>
-                    </StackPanel>
-                    <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
-                    <StackPanel DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
-                        <CheckBox IsChecked="{Binding ReceiveWithNewLine, UpdateSourceTrigger=PropertyChanged}"     Margin="0 0 0 2" Content="Receive with NewLine" VerticalAlignment="Top"/>
-                        <CheckBox IsChecked="{Binding ReceiveWithCustomTag, UpdateSourceTrigger=PropertyChanged}"   Margin="0 0 0 2" Content="Receive w/ Custom Tag" VerticalAlignment="Top"/>
-                        <CheckBox IsChecked="{Binding ReceiveWithNothingElse, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 2" Content="Receive raw (no new line)" VerticalAlignment="Top"/>
-                    </StackPanel>
-                    <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
-                    <Grid Margin="0 2 2 2" DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
-                        <Label Content="Custom Tag:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                        <TextBox Text="{Binding CustomTag, UpdateSourceTrigger=PropertyChanged}" Padding="4" VerticalAlignment="Top" Margin="75,0,0,0"/>
-                    </Grid>
-                    <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
-                    <CheckBox DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}"
+                <Grid DockPanel.Dock="Right" x:Name="SettingsMenu"
+                      HorizontalAlignment="Right" Width="0">
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="200" >
+                        <StackPanel DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}">
+                            <Label Content="Transceive Filtering" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                            <TextBlock Text="DONT CHECK MORE THAN 1 SEND/RECEIVE" FontSize="10" HorizontalAlignment="Center" VerticalAlignment="Top"
+                                   ToolTip="Dont clicked multiple [send with/receive with] checkboxes, otherwise the topmost checked one will be applied. why? radiobuttons wont work for some reason :("/>
+                            <Separator/>
+                            <StackPanel DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
+                                <CheckBox IsChecked="{Binding SendWithNewLine, UpdateSourceTrigger=PropertyChanged}"     Margin="0 0 0 2" Content="Send with NewLine" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding SendWithCustomTag, UpdateSourceTrigger=PropertyChanged}"   Margin="0 0 0 2" Content="Send w/ Custom Tag" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding SendWithNothingElse, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 2" Content="Send raw (no new line)" VerticalAlignment="Top"/>
+                            </StackPanel>
+                            <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
+                            <StackPanel DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
+                                <CheckBox IsChecked="{Binding ReceiveWithNewLine, UpdateSourceTrigger=PropertyChanged}"     Margin="0 0 0 2" Content="Receive with NewLine" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding ReceiveWithCustomTag, UpdateSourceTrigger=PropertyChanged}"   Margin="0 0 0 2" Content="Receive w/ Custom Tag" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding ReceiveWithNothingElse, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 2" Content="Receive raw (no new line)" VerticalAlignment="Top"/>
+                            </StackPanel>
+                            <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
+                            <Grid Margin="0 2 2 2" DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}">
+                                <Label Content="Custom Tag:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                                <TextBox Text="{Binding CustomTag, UpdateSourceTrigger=PropertyChanged}" Padding="4" VerticalAlignment="Top" Margin="75,0,0,0"/>
+                            </Grid>
+                            <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
+                            <CheckBox DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}"
                                       IsChecked="{Binding ClearTBSTAfterTransmission, UpdateSourceTrigger=PropertyChanged}" 
                                       Margin="0,0,2,2" VerticalAlignment="Top" Height="36"
                                       ToolTip="Clear the textbox (which holds the text that will be sent when you click enter/Send) when a message is transmitted.">
-                        <TextBlock TextWrapping="Wrap" Margin="5 0 0 0">
+                                <TextBlock TextWrapping="Wrap" Margin="5 0 0 0">
                                     <Run Text="Clear [TextToBeSent] text box after sending a message"/>
-                        </TextBlock>
-                    </CheckBox>
-                </StackPanel>
+                                </TextBlock>
+                            </CheckBox>
+                            <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
+                            <Label Content="SerialPort Encoding"/>
+                            <ListBox DataContext="{Binding Settings, UpdateSourceTrigger=PropertyChanged}" 
+                             ItemsSource="{Binding AllSerialEncodings}" 
+                             SelectedItem="{Binding SerialEncoding, UpdateSourceTrigger=PropertyChanged}"
+                             SelectedIndex="1" Height="90" Margin="0 2 2 2">
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Path=EncodingName}"/>
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
+                            </ListBox>
+                            <Separator HorizontalAlignment="Stretch" Margin="0 5 2 5"/>
+                        </StackPanel>
+                    </ScrollViewer>
+                </Grid>
                 <Grid Margin="2,0,0,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="185" MaxWidth="250"/>
@@ -252,7 +270,7 @@
                         <Grid DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,2,0">
                             <Grid Margin="0,0,0,35">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="5*" MinWidth="332"/>
+                                    <ColumnDefinition Width="5*" MinWidth="335"/>
                                     <ColumnDefinition Width="3"/>
                                     <ColumnDefinition Width="3.5*" MinWidth="332"/>
                                 </Grid.ColumnDefinitions>
@@ -271,7 +289,7 @@
                                     <Border BorderBrush="{DynamicResource BackgroundColour}" BorderThickness="0 0 0 1" Margin="1,0,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
                                     <Label Content="Received Messages" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                                     <Border BorderBrush="{DynamicResource BackgroundColour}" BorderThickness="0 0 0 1" Margin="0,0,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
-                                    <Border BorderBrush="{DynamicResource ControlDefaultBorderBrush}" BorderThickness="1 1 1 0" CornerRadius="3 3 0 0" Margin="0,0,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
+                                    <Border BorderBrush="{DynamicResource ControlDefaultBorderBrush}" BorderThickness="1 1 1 0" CornerRadius="5 5 0 0" Margin="0,0,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
                                 </Grid>
                                 <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,26,0,0"/>
                                 <Grid Grid.Column="2" Margin="2,0,0,0">
@@ -288,7 +306,7 @@
                                         </Grid>
                                     </Button>
                                     <Border BorderBrush="{DynamicResource BackgroundColour}" BorderThickness="0 0 0 1" Margin="0,0,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
-                                    <Border BorderBrush="{DynamicResource ControlDefaultBorderBrush}" BorderThickness="1 1 1  0" Margin="0,0,0,0" CornerRadius="3 3 0 0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
+                                    <Border BorderBrush="{DynamicResource ControlDefaultBorderBrush}" BorderThickness="1 1 1  0" Margin="0,0,0,0" CornerRadius="5 5 0 0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Center" Width="125"/>
                                 </Grid>
                             </Grid>
                             <Grid IsEnabled="{Binding IsConnected, UpdateSourceTrigger=PropertyChanged}" Height="33" VerticalAlignment="Bottom">
@@ -313,7 +331,7 @@
             <Grid Grid.Row="2" Margin="0,2,0,0" IsEnabled="{Binding SerialsList.SelectedItem, Converter={StaticResource ObjectNullConverter}}">
                 <Border Background="{DynamicResource ContainerBackground}" BorderThickness="1" BorderBrush="{DynamicResource ControlDefaultBorderBrush}"/>
                 <Grid Margin="10,10,0,10" HorizontalAlignment="Left" Width="172" >
-                    <Grid DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,54">
+                    <Grid DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,58">
                         <Label Content="Connect to:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                         <TextBox Text="{Binding SerialItemName, UpdateSourceTrigger=PropertyChanged}" 
                                          Padding="4" Margin="71,0,0,0" VerticalAlignment="Top"
@@ -328,10 +346,10 @@
                             </Grid>
                         </Button>
                     </Grid>
-                    <Grid DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" >
+                    <Grid DataContext="{Binding SerialsList.SelectedItem.ItemView.SerialView, UpdateSourceTrigger=PropertyChanged}" Height="53" VerticalAlignment="Bottom" >
                         <CheckBox IsChecked="{Binding DataTerminalReady, UpdateSourceTrigger=PropertyChanged}"
-                                          Content="DTR"  VerticalAlignment="Bottom" HorizontalAlignment="Left"
-                                          Height="22" Margin="0,0,0,28" Width="45"
+                                          Content="DTR"  VerticalAlignment="Top" HorizontalAlignment="Left"
+                                          Height="24" Width="45"
                                           ToolTip="Data Terminal Ready (tell connected device it should be ready to do 'stuff')"/>
                         <ProgressBar IsIndeterminate="{Binding WaitingStatus, UpdateSourceTrigger=PropertyChanged}" 
                                              Height="24" VerticalAlignment="Bottom" ToolTip="Activity bar, shows if something is 'going on'"/>
@@ -340,7 +358,7 @@
                     <Button Content="Reset SerialPort" 
                                     Command="{Binding ResetSerialViewCommand}"
                                     Margin="45,0,0,28"
-                                    ToolTip="Sometimes a bug that cant be fixed happens. Reset the SerialPort to hopefully fix it. WILL RESET ALL SETTINGS APPLIED, LIKE BAUD RATE, BUFFERSIZE, ETC" Height="22" VerticalAlignment="Bottom"/>
+                                    ToolTip="Sometimes a bug that cant be fixed happens. Reset the SerialPort to hopefully fix it. WILL RESET ALL SETTINGS APPLIED, LIKE BAUD RATE, BUFFERSIZE, ETC" Height="25" VerticalAlignment="Bottom"/>
                 </Grid>
                 <Separator Style="{DynamicResource VerticalSeparator}" HorizontalAlignment="Left" Margin="185,10,0,10"/>
                 <Grid Margin="190,10,10,10">
@@ -378,10 +396,11 @@
                             <Label Content="Timeouts" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                             <Grid IsEnabled="{Binding IsConnected, Converter={StaticResource InvertBoolean}, UpdateSourceTrigger=PropertyChanged}" Height="30" Margin="0,26,0,0" VerticalAlignment="Top">
                                 <Label Content="Read" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                                <Slider VerticalAlignment="Center" Margin="42,0,0,0" IsMoveToPointEnabled="True"
-                                                Minimum="100" Maximum="10000" Value="{Binding ReceiveTimeout, UpdateSourceTrigger=PropertyChanged}"
-                                                ToolTip="Time to wait for an incomming message to be read" AutoToolTipPlacement="TopLeft" 
-                                                LargeChange="500" SmallChange="100" TickPlacement="BottomRight" TickFrequency="500" IsSnapToTickEnabled="False"/>
+                                <Slider VerticalAlignment="Center" Margin="42,0,0,0" Minimum="100" Maximum="10000" 
+                                        Value="{Binding ReceiveTimeout, UpdateSourceTrigger=PropertyChanged}"
+                                        ToolTip="Time to wait for an incomming message to be read" 
+                                        AutoToolTipPlacement="TopLeft" LargeChange="500" SmallChange="100" 
+                                        TickPlacement="BottomRight" TickFrequency="500" IsSnapToTickEnabled="False"/>
                             </Grid>
                             <Grid IsEnabled="{Binding IsConnected, Converter={StaticResource InvertBoolean}, UpdateSourceTrigger=PropertyChanged}" Height="30" Margin="0,56,0,0" VerticalAlignment="Top">
                                 <Label Content="Write" HorizontalAlignment="Left" VerticalAlignment="Top"/>
