--- a/SerialCommunicator/Controls/SerialMessage.xaml
+++ b/SerialCommunicator/Controls/SerialMessage.xaml
@@ -3,22 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             HorizontalAlignment="Stretch"
-             HorizontalContentAlignment="Stretch"
-             Margin="0" Padding="0"
+             Margin="0" Padding="0" d:DesignWidth="100"
              xmlns:local="clr-namespace:SerialCommunicator.Controls" 
              xmlns:viewmodels="clr-namespace:SerialCommunicator.ViewModels"
-             mc:Ignorable="d" ToolTip="{Binding Time, StringFormat='hh:mm:ss tt'}">
-    <Grid>
-        <Grid>
-            <TextBlock Text="{Binding RXorTX}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0"/>
-            <TextBlock Text=">" VerticalAlignment="Center" Margin="36,3,0,5" HorizontalAlignment="Left" Width="8" TextAlignment="Center"/>
-            <TextBox Text="{Binding Message}"
+             mc:Ignorable="d" 
+             ToolTip="{Binding Message.Time, UpdateSourceTrigger=PropertyChanged, StringFormat='hh:mm:ss tt'}" 
+             Foreground="{DynamicResource ControlDefaultForeground}">
+    <Grid Background="{Binding Path=Background, UpdateSourceTrigger=PropertyChanged}">
+        <TextBlock Text="{Binding Message.RXorTX, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0" Width="35" DockPanel.Dock="Left" TextTrimming="None"/>
+        <TextBlock Text=">" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="37,0,0,2" Width="8" TextAlignment="Center" TextTrimming="None"/>
+        <TextBox Text="{Binding Message.Message, UpdateSourceTrigger=PropertyChanged}"
                  TextWrapping="Wrap"
                  Background="Transparent"
                  BorderThickness="0 0 0 1"
                  IsReadOnly="True"
-                 Padding="1" Margin="46,2,2,2"/>
-        </Grid>
+                 Padding="1" Margin="45,2,2,2"/>
     </Grid>
 </UserControl>
