--- a/SerialCommunicator/Controls/SerialPortItem.xaml
+++ b/SerialCommunicator/Controls/SerialPortItem.xaml
@@ -1,12 +1,8 @@
-﻿<UserControl x:Class="SerialCommunicator.Controls.SerialItem"
+﻿<UserControl x:Class="SerialCommunicator.Controls.SerialPortItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SerialCommunicator.Controls" 
-             xmlns:viewmodels="clr-namespace:SerialCommunicator.ViewModels"
-             HorizontalAlignment="Stretch"
-             HorizontalContentAlignment="Stretch"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" Background="Transparent"
              Foreground="{DynamicResource ControlDefaultForeground}"
              d:DesignHeight="54" d:DesignWidth="150">
@@ -16,11 +12,11 @@
                Margin="2 2 25 0" Padding="4" 
                VerticalAlignment="Top"/>
         <Button Margin="0,2,2,0" 
+                Command="{Binding CloseItem, Mode=OneTime}"
                 Background="Transparent"
                 VerticalAlignment="Top" HorizontalAlignment="Right" 
                 Width="23" Height="23" 
-                BorderThickness="0"
-                Click="Button_Click">
+                BorderThickness="0">
             <Grid Margin="1 1 0 0">
                 <Line X1="0" Y1="0" X2="11" Y2="11" Stroke="#FFE81414" StrokeThickness="3" />
                 <Line X1="0" Y2="0" Y1="11" X2="11" Stroke="#FFE81414" StrokeThickness="3" />
